<resources>
    <string name="app_name">亚青助手</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="left_menu_setting">设置</string>
    <string name="right_menu_join_entry">参赛项目</string>
    <string name="select_lan_en">Please correct choice of the host country</string>
    <string name="welcome_to_nanjing">WELCOME TO NANJING</string>
    <string name="login_title">账号登录</string>
    <string name="login_hint_username">请输入您的ID账号</string>
    <string name="login_hint_pwd">请输入您证件的后6位数字</string>
    <string name="login_dologin">登录体验</string>
    <string name="login_name">账号</string>
    <string name="login_pwd">密码</string>
    <string name="name_or_pwd_isempty">用户名或密码为空</string>
    <string name="pro_exit_cofirm">再按一次返回退出</string>
    <string name="login_failed">登录失败</string>
    <string name="menu_left_home">首页</string>
    <string name="menu_left_schedule">赛事日程</string>
    <string name="menu_left_equip">周边设施</string>
    <string name="name">用户名</string>
    <string name="notify">通知</string>
    <string name="activity">我的CEP</string>
    <string name="attention_item">关注的赛事</string>
    <string name="attend_schdule">参赛项目日程</string>
    <string name="has_attention_item">已关注项目  2</string>
    <string name="delete">删除</string>
    <string name="attention_test_text">男子200米花样游泳</string>
    <string name="net_exception">网络异常</string>
    <string name="order_attend">关注</string>
    <string name="order_cancel">取消预约</string>
    <string name="addCommit">添加评论</string>
    <string name="news_detail_title">活动详情</string>
    <string name="my_activity">我的活动</string>
    <string name="has_attend_activity">已报名活动</string>
    <string name="activity_notify">&#160;活动通知&#160;</string>
    <string name="sign_in">签到</string>
    <string name="applying">申请中</string>
    <string name="has_attend">已经报名</string>
    <string name="activity_search">活动查询</string>
    <string name="schedule_banner_text">竞赛日程</string>
    <string name="signin_record">签到记录</string>
    <string name="scan_tips">点击扫描二维码即可成功签到</string>
    <string name="surround_title">周边查找</string>
    <string name="cep_menu_title">CEP活动</string>
    <string name="contact_menu_title">社交活动</string>
    <string name="order_sucess">预约成功</string>
    <string name="temp1">今天</string>
    <string name="temp2">23℃/9℃</string>
    <string name="cep_item_icon_attend">人报名参加</string>
    <string name="cep_score_failed">评论失败</string>
    <string name="jifeng">积分:120</string>
    <string name="activity_willstart">活动即将开始, 请做好准备</string>
    <string name="dialog_title">提示</string>
    <string name="dialog_msg">正在加载，请稍后</string>
    <string name="zero_minutes">0分钟</string>
    <string name="thrity_minutes">30分钟</string>
    <string name="sixty_minutes">60分钟</string>
    <string name="iknow">知道了!</string>
    <string name="comment_one_class">活动很好，希望下次还可以参加!</string>
    <string name="comment_two_class">活动让我学到了跟多，同时也让我放松很多!</string>
    <string name="comment_three_class">很好，我非常喜欢!</string>
    <string name="comment_four_class">希望下次还可以来南京参加青奥会!</string>
    <string name="comment_five_class">加油!</string>
    <string name="contact_title">社区交友</string>
    <string name="no_sd_card">没有发现SD卡，不能执行操作</string>
    <string name="islogining">登录中，请稍等</string>
    <string name="opengps">请先打开GPS定位功能,否则无法签到</string>
    <string name="sat">Sat</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sun">Sun</string>
    <string name="badge">BADAGE</string>
    <string name="base_information">基本信息</string>
    <string name="country">国籍</string>
    <string name="gender">性别</string>
    <string name="attend_items">参赛项目</string>
    <string name="cep_video">CEP视频</string>
    <string name="schedule_my_project">我参加的项目</string>
    <string name="schedule_other_project">其它的项目</string>
    <string name="project_trackfield">田径</string>
	<string name="make_socre">评分</string>
	<string name="event_tips">事项提醒</string>
	<string name="event_remind_text">开始前%d分钟提醒</string>
	<string name="dialy_remind">每日提醒</string>	
	<string name="dialy_remind_text">%s提醒</string>
	<string name="about">关于</string>
	<string name="help">帮助</string>
	<string name="upgrate_version">升级版本</string>
	<string name="reset_password">修改密码</string>
	<string name="login_out">退出账号</string>
	<string name="change_thumb">修改头像</string>
	<string name="take_photo">相机拍摄</string>
	<string name="select_from_album">从相册中获取</string>
	<string name="confirm_thumb">确认使用此头像?</string>
	<string name="confirm">确认</string>
	<string name="cancel">取消</string>
	<string name="account_init_password">账号初始密码</string>
	<string name="new_passwod">新密码</string>
	<string name="new_confirm_password">新密码确认</string>
	<string name="close_event_remind">关闭事项提醒</string>
	<string name="open_event_remind">开启事项提醒</string>
	<string name="schedule_item_tips">活动开始前%d分钟提醒</string>
	<string name="is_locating">正在定位中...</string>
	<string name="upload_waiting">正在验证中..</string>
	<string name="has_order">已预约</string>
	<string name="is_ordering">预约中</string>
	<string name="shake_tips">摇一摇查找活动推荐</string>
	<string name="push_title">推送通知</string>
	<string name="scan">查看</string>
	<string name="weibo_send">发送</string>
	<string name="click_play">点击查看CEP宣传视频</string>
	<string name="first_tips">点击查询添加按钮即可查询并添加“赛事日程”,“CEP活动”,至功能首页以及查看“CEP宣传视频”</string>
	<string name="score_title">给活动打分</string>
	<string name="submit">提交</string>
	<string name="change_error">密码输入错误</string>
	<string name="loginout_success">退出成功</string>
	<string name="delete_schdule">确认删除此日程吗?</string>
	<string name="signin_in_failed">签到失败</string>
	<string name="number">NO.</string>
	<string name="watch_success">关注成功</string>
	<string name="watch_failed">关注失败</string>
	<string name="get_medal">获得CEP活动勋章一枚</string>
	<string name="OK">OK !</string>
	<string name="cep_socre1">整体评价</string>
	<string name="cep_socre2">组织水平 </string>
	<string name="cep_socre3">个人收获 </string>	
	<string name="weibo01">我正在参加“青年的节日”（第二届亚洲青年运动会的主题活动）。 </string>
	<string name="weibo02">我正在参加“亚洲文化村”（第二届亚洲青年运动会的主题活动）。 </string>
	<string name="weibo03">我正在参加“国际组织展”（第二届亚洲青年运动会的主题活动）。 </string>
	<string name="weibo04">我正在参加“生态环保农业”（第二届亚洲青年运动会的主题活动）。 </string>
	<string name="weibo05">我正在参加“南京历史文化风貌观光”（第二届亚洲青年运动会的主题活动）。 </string>
	<string name="weibo_sending">微博发送中...... </string>
	<string name="alarm_title">提醒到时了</string>
	<string name="update_no_need">已经是最新版本！</string>
	
	<string-array name="time_before_array">
	    <item>提前30分钟提醒</item>
	    <item>提前1小时提醒</item>
	    <item>提前2小时提醒</item>
	</string-array>
	<string-array name="time_daily_array">
	    <item>6:30</item>
	    <item>9:00</item>
	    <item>12:00</item>
	</string-array>
	<string name="game_detail_info_empty">该比赛项目已结束</string>
	<string name="empty_box_text">今天暂无更多事项需要查看</string>
	<string name="cancel_attention">确认删除此项?</string>
</resources>
