<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5E5E5" >

    <ImageView
        android:id="@+id/banner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:scaleType="fitXY"
        android:src="@drawable/login_banner" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/banner"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        android:padding="10dp" >

        <EditText
            android:id="@+id/user_text"
            android:padding="4dp"
            android:textSize="15dp"
            android:hint="@string/login_name"
            android:drawableLeft="@drawable/login_use_left"
             android:background="@drawable/login_text_bg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/login_hint_username"
            android:textColor="#5F5F5F"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/pwd_text"
            android:padding="4dp"
            android:textSize="15dp"
            android:hint="@string/login_pwd"
            android:drawableLeft="@drawable/login_pwd_left"
            android:background="@drawable/login_text_bg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/login_hint_pwd"
            android:textColor="#5F5F5F"
            android:textSize="14dp" />

        <Button
            android:id="@+id/login"
            android:layout_marginTop="25dp"
            android:background="@drawable/btn_login_bg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_dologin"
            android:textColor="#ffffff" />
        
    </LinearLayout>

</RelativeLayout>