<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0EBE7"
    android:id="@+id/popMain"
    android:orientation="vertical" >

    <View
        android:layout_width="fill_parent"
        android:layout_height="4px"
        android:background="#ffffff" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/change_thumb"
        android:textColor="#797979"
        android:textSize="20dp" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/single_line" />

	<Button
	    android:id="@+id/take_photo_btn"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:layout_marginTop="10dp"
	    android:background="@drawable/take_photo_btn_bg"
	    android:text="@string/take_photo"
	    android:textColor="#ffffff" />

	<Button 
	    android:id="@+id/select_albume_btn"
	    android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:textColor="#ffffff"
        android:text="@string/select_from_album"
        android:background="@drawable/select_photo_btn_bg"
	    />	
</LinearLayout>