<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="#F0EBE7"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/delete"
            android:textColor="#797979"
            android:textSize="20dp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2px"
            android:layout_margin="5dp"
            android:background="@drawable/siglines2" />

        <TextView
            android:id="@+id/content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/cancel_attention"
            android:textColor="#797979"
            android:textSize="22dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp" >

            <Button
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/take_photo_btn_bg"
                android:text="@string/cancel"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/dodelete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/select_photo_btn_bg"
                android:text="@string/delete"
                android:textColor="#ffffff" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>