<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff" >

    <ImageView
        android:id="@+id/j_top"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY"
        android:src="@drawable/top_banner_bg" />

    <RelativeLayout
        android:id="@+id/j_main_banner"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:padding="@dimen/main_banner_padding" >

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="3dp"
            android:background="@android:color/transparent"
            android:src="@drawable/back_top_btn" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/main_top_right_btn_marginTop"
            android:background="@android:color/transparent"
            android:src="@drawable/show_title" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/j_line"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/j_top"
        android:scaleType="fitXY"
        android:src="@drawable/colorbar" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/j_line"
        android:background="#E5E5E5"
        android:orientation="vertical"
        android:padding="10dp" >

        <EditText
            android:id="@+id/origin_password"
            android:inputType="textPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/account_init_password"
            android:textSize="12dp" />

        <EditText
            android:id="@+id/new_password"
            android:inputType="textPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/new_passwod"
            android:textSize="12dp" />

        <EditText
            android:id="@+id/new_confirm_password"
            android:inputType="textPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/new_confirm_password"
            android:textSize="12dp" />

        <Button
            android:id="@+id/changeBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_login_bg"
            android:text="@string/confirm"
            android:textColor="#ffffff" />
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/j_line"
        android:scaleType="fitXY"
        android:src="@drawable/shader_line" />

</RelativeLayout>