<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff" >

    <ImageView
        android:id="@+id/j_top"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY"
        android:src="@drawable/top_banner_bg" />

    <RelativeLayout
        android:id="@+id/j_main_banner"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:padding="@dimen/main_banner_padding" >

        <ImageButton
            android:id="@+id/main_banner_left_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="6dp"
            android:background="@android:color/transparent"
            android:src="@drawable/back_top_btn" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/j_line"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/j_top"
        android:scaleType="fitXY"
        android:src="@drawable/colorbar" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/j_line"
        android:orientation="vertical"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="星数:"
                android:textSize="14dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="4颗星"
                android:textColor="#E59B3B"
                android:textSize="14dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:src="@drawable/comment_star" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:src="@drawable/comment_star" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:src="@drawable/comment_star" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:src="@drawable/comment_star" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:src="@drawable/comment_empty_star" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2px"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#CCC7BB" />

        <RadioGroup
            android:id="@+id/radioCommentGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:soundEffectsEnabled="true" >

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/comment_radio_bg"
                android:text="@string/comment_one_class"
                android:textColor="#000000"
                android:textSize="14dp" >
            </RadioButton>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/comment_radio_bg"
                android:text="@string/comment_two_class"
                android:textColor="#000000"
                android:textSize="14dp" >
            </RadioButton>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/comment_radio_bg"
                android:text="@string/comment_three_class"
                android:textColor="#000000"
                android:textSize="14dp" >
            </RadioButton>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/comment_radio_bg"
                android:text="@string/comment_four_class"
                android:textColor="#000000"
                android:textSize="14dp" >
            </RadioButton>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/comment_radio_bg"
                android:text="@string/comment_five_class"
                android:textColor="#000000"
                android:textSize="14dp" >
            </RadioButton>
        </RadioGroup>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2px"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#CCC7BB" />

        <Button
            android:id="@+id/sendCommentBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/send_btn_bg"
            />
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/j_line"
        android:scaleType="fitXY"
        android:src="@drawable/shader_line" />

</RelativeLayout>